--- a/websitedemo/mountain.html
+++ b/websitedemo/mountain.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Climb the Mountain!</h1>
+<h1>Lets conquer this mountain</h1>
 
 <img src = "images/mountain.jpg" alt="Mount Rainier" onmouseover="showAlt(this)" onmouseout="hideAlt(this)">
 <figcaption>Rope Up!</figcaption>
