--- a/websitedemo/falls.html
+++ b/websitedemo/falls.html
@@ -7,7 +7,7 @@
 </head>
 <body >
 
-<h1>The Sparkling Waters</h1>
+<h1>The Raging Waterfall</h1>
 
 <img src = "images/waterfall.jpg" alt="Ranger Falls" onmouseover="showAlt(this)" onmouseout="hideAlt(this)">
 <figcaption>Take in the Scenery</figcaption>
