--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
 <title>Behold Nature's Beauty!</title>
 <link rel="stylesheet" type="text/css" href="styles/branchlevel.css">
-<script src="scripts/myscripts.js"></script>
+<script src="scripts/myscript
 </head>
 <body >
 
