--- a/new.html
+++ b/new.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html
+<html
+<head
 <title>Behold Nature's Beauty!</title>
 <link rel="stylesheet" type="text/css" href="styles/branchlevel.css">
 <script src="scripts/myscripts.js"></script>
