--- a/test (1).html
+++ b/test (1).html
@@ -1,8 +1,8 @@
 <!-- This file, "test.html", is at the root of the Document Object Model -->
 <!DOCTYPE html>
 
-<html>
-<head>
+<html
+<head
 
 <title>Multifile JavaScript Test</title>
     
