--- a/new.html
+++ b/new.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"
+<head
   <meta charset="UTF-8"
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
   <title>Harry Potter Theme</title>
   <style>
     body {
       background-image: url('https://w0.peakpx.com/wallpaper/852/506/HD-wallpaper-harry-potter-movie-hogwarts-castle-harry-potter-and-the-chamber-of-secrets.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
+      background-size:
+      background-attachmen
       font-family: 'Harry Potter', sans-serif;
       margin: 0;
     }
@@ -36,9 +35,9 @@
 
     img {
       width: 100%;
-      border-radius: 10px;
+      bordex;
       margin-top: 20px;
-      margin-bottom: 20px;
+      margin-bott;
       max-width: 600px;
       display: block;
       margin-left: auto;
